--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "types": [
+      "@angular/localize"
+    ],
     "lib": [
       "ES2022",
       "dom"
@@ -29,5 +32,7 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "resolveJsonModule": true,
+  "esModuleInterop": true,
 }
